Revert "Fix FV maincopy size at 320-425px: full width with 1% wrap padding."
This reverts commit 270cc0f68af6e699f71b1fcc2a50c054299e59b5.

--- a/mobile.css
+++ b/mobile.css
@@ -2904,22 +2904,12 @@
     width: 100%;
   }
 
-  .home-page .fv-maincopy-wrap {
-    align-self: stretch;
-    width: 100%;
-    max-width: none;
-    padding-left: 1%;
-    padding-right: 1%;
-    box-sizing: border-box;
-    margin: 0;
-  }
-
   .home-page .fv-maincopy {
     display: block;
-    width: 100%;
+    width: 98%;
     max-width: none;
     height: auto;
-    margin: 0;
+    margin: 0 auto;
   }
 
   .home-page .fv-foreground__figures {
